--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
     "C_Cpp.default.intelliSenseMode": "windows-gcc-x64",
-    "C_Cpp.default.compilerPath": "C:\\mingw64\\bin\\g++.exe"
+    "C_Cpp.default.compilerPath": "C:\\mingw64\\bin\\g++.exe",
+    "C_Cpp.errorSquiggles": "disabled",
+    "files.associations": {
+        "ostream": "cpp",
+        "iostream": "cpp",
+        "iosfwd": "cpp"
+    }
 }
